# simba

./: .gitignore  Makefile  README.md  celery-test.txt  findings.md  pnpm-lock.yaml  progress.md  pyproject.toml  simba-test-doc.txt  task_plan.md  test-faq.md  test-faq.txt
.claude/skills/simba/deploy/: skill.md
docker/: docker-compose.yml
docs/: customization-guide.md  siliconflow-integration.md
features/: chinese-rag-support.md
frontend/: package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: page.tsx
frontend/src/app/(dashboard)/analytics/: page.tsx
frontend/src/app/(dashboard)/conversations/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/deploy/: page.tsx
frontend/src/app/(dashboard)/documents/: page.tsx
frontend/src/app/(dashboard)/evals/: page.tsx
frontend/src/app/(dashboard)/playground/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/components/chat/: chat-message.tsx  chat-sources.tsx  chat-status.tsx  chat-widget-wrapper.tsx
frontend/src/components/common/: language-toggle.tsx
frontend/src/components/documents/: collection-selector.tsx  document-upload-zone.tsx  documents-table.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/hooks/: useChat.ts  useSettings.ts
frontend/src/lib/: auth.ts  constants.ts  eval-constants.ts  i18n.ts
frontend/src/lib/locales/: en.json  zh.json
frontend/src/providers/: brand-provider.tsx  i18n-provider.tsx  index.tsx
frontend/src/types/: api.ts
simba/: cli.py
simba/api/: app.py
simba/api/routes/: documents.py  evals.py  organizations.py  settings.py
simba/core/: config.py
simba/models/: __init__.py  settings.py
simba/prompts/: default_en.txt  default_zh.txt
simba/services/: bm25_service.py  chat_service.py  chunker_service.py  embedding_service.py  ingestion_service.py  prompt_service.py  reranker_service.py  retrieval_service.py  settings_service.py
test-docs/: 01-公司介绍.md  02-产品定价.txt  03-用户指南.md  04-常见问题.txt  05-API接口文档.md  06-售后服务政策.txt  07-数据安全白皮书.md  08-部署指南.txt  09-功能更新日志.md  10-培训手册.txt  11-行业解决方案-金融.md  12-行业解决方案-电商.txt  13-行业解决方案-教育.md  14-技术架构说明.txt  15-集成指南.md  16-运维手册.txt  17-最佳实践.md  18-隐私政策.txt  19-服务条款.md  20-人工智能技术介绍.txt  test-small.txt
